2005-05-19  Kelley Cook  <kcook@gcc.gnu.org>

	* Makefile.in:  Regenerate.

2005-05-17  Zack Weinberg  <zack@codesourcery.com>

	* arm-dis.c (thumb_opcodes): Add disassembly for V6T2 16-bit
	instructions.  Adjust disassembly of some opcodes to match
	unified syntax.
	(thumb32_opcodes): New table.
	(print_insn_thumb): Rename print_insn_thumb16; don't handle
	two-halfword branches here.
	(print_insn_thumb32): New function.
	(print_insn): Choose among print_insn_arm, print_insn_thumb16,
	and print_insn_thumb32.  Be consistent about order of
	halfwords when printing 32-bit instructions.

2005-05-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR 843
	* i386-dis.c (branch_v_mode): New.
	(indirEv): Use branch_v_mode instead of v_mode.
	(OP_E): Handle branch_v_mode.

2005-05-07  H.J. Lu  <hongjiu.lu@intel.com>

	* d10v-dis.c (dis_2_short): Support 64bit host.

2005-05-07  Nick Clifton  <nickc@redhat.com>

	* po/nl.po: Updated translation.

2005-05-07  Nick Clifton  <nickc@redhat.com>

	* Update the address and phone number of the FSF organization in
	the GPL notices in the following files:
	a29k-dis.c, aclocal.m4, alpha-dis.c, alpha-opc.c, arc-dis.c,
	arc-dis.h, arc-ext.c, arc-ext.h, arc-opc.c, arm-dis.c, arm-opc.h,
	avr-dis.c, cgen-asm.c, cgen-asm.in, cgen-dis.c, cgen-dis.in,
	cgen-ibld.in, cgen-opc.c, cgen.sh, cris-dis.c, cris-opc.c,
	crx-dis.c, crx-opc.c, d10v-dis.c, d10v-opc.c, d30v-dis.c,
	d30v-opc.c, dis-buf.c, dis-init.c, disassemble.c, dlx-dis.c,
	fr30-asm.c, fr30-desc.c, fr30-desc.h, fr30-dis.c, fr30-ibld.c,
	fr30-opc.c, fr30-opc.h, frv-asm.c, frv-desc.c, frv-desc.h,
	frv-dis.c, frv-ibld.c, frv-opc.c, frv-opc.h, h8300-dis.c,
	h8500-dis.c, h8500-opc.h, hppa-dis.c, i370-dis.c, i370-opc.c,
	i386-dis.c, i860-dis.c, i960-dis.c, ia64-asmtab.h, ia64-dis.c,
	ia64-gen.c, ia64-opc-a.c, ia64-opc-b.c, ia64-opc-d.c,
	ia64-opc-f.c, ia64-opc-i.c, ia64-opc-m.c, ia64-opc-x.c,
	ia64-opc.c, ia64-opc.h, ip2k-asm.c, ip2k-desc.c, ip2k-desc.h,